# fat

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/fat/: main.py
src/fat/apps/: __init__.py
src/fat/apps/auth/: depends.py  handlers.py  managers.py  routes.py  schemas.py  services.py  tasks.py  utils.py
src/fat/apps/profile/: managers.py  routes.py  schemas.py  services.py
src/fat/core/: celery_config.py  db_dependency.py  redis_dependency.py  settings.py
src/fat/database/alembic/: env.py
src/fat/database/alembic/versions/: 2025_10_01_2315-35e38d3bb5c1_create_user_table.py
src/fat/database/mixins/: id_mixins.py  timestamp_mixins.py
src/fat/database/models/: __init__.py  base.py  user.py
tests/: conftest.py  test_routes.py
tests/api/: test_request_validation.py
tests/smoke/: test_routes.py
