[project]
name = "fat"
version = "0.1.0"
description = ""
authors = [
    {name = "Дмитрий Тарасов",email = "demiat@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.117.1,<0.118.0)",
]

[tool.poetry]
packages = [{include = "fat", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]  
app = "fat.main:start"
