[project]
name = "fat"
version = "0.1.0"
description = ""
authors = [
    {name = "Дмитрий Тарасов",email = "demiat@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.117.1,<0.118.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "ruff (>=0.13.2,<0.14.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "pydantic[email] (>=2.11.10,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "fat", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]  
app = "fat.main:start"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
#    "--cov=src",
#    "--cov-report=term-missing:skip-covered",
#    "--cov-fail-under=80"
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests for domain logic",
    "integration: Integration tests for application layer",
    "e2e: End-to-end tests for API endpoints",
    "slow: Tests that take more than 5 seconds",
    "api: API contract tests",
    "smoke: Basic smoke tests",
    "redis: Tests that require Redis",
    "db: Tests that require database"
]